@@ -7,47 +7,47 @@
 <body bgcolor="white">
 
 <h1>The Common Lisp Cookbook</h1>
-<p>This is a collaborative project that aims to provide for Common Lisp 
-something similar to the <a href="http://www.oreilly.com/catalog/cookbook/">Perl 
-Cookbook</a> published by O'Reilly. More details about what it is and what it 
+<p>This is a collaborative project that aims to provide for Common Lisp
+something similar to the <a href="http://www.oreilly.com/catalog/cookbook/">Perl
+Cookbook</a> published by O'Reilly. More details about what it is and what it
 isn't can be found in this
 <a href="http://groups.google.com/groups?threadm=m3it9soz3m.fsf%40bird.agharta.de">
 thread</a> from <a href="news:comp.lang.lisp">comp.lang.lisp</a>. </p>
-<p>The credit for finally giving birth to the project probably goes to &quot;dj_special_ed&quot; 
+<p>The credit for finally giving birth to the project probably goes to &quot;dj_special_ed&quot;
 who posted
 <a href="http://groups.google.com/groups?selm=76be8851.0201222259.70ecbcb1%40posting.google.com">
 this message</a> to <a href="news:comp.lang.lisp">comp.lang.lisp</a>. </p>
 <p>If you want to contribute to the CL Cookbook, you can </p>
 <ul>
   <li>ask one of the
-  <a href="http://sourceforge.net/project/memberlist.php?group_id=46815">project 
+  <a href="http://sourceforge.net/project/memberlist.php?group_id=46815">project
   admins</a> to become a registered developer, </li>
   <li>submit patches via Sourceforge's
   <a href="http://sourceforge.net/tracker/?atid=447474&group_id=46815&func=browse">
   patch tracking system</a>, </li>
-  <li>or simply send stuff (corrections, additions, or even whole chapters) by 
+  <li>or simply send stuff (corrections, additions, or even whole chapters) by
   email. </li>
 </ul>
-<p>Yes, we're talking to <b>you</b>! <font color="red">We need contributors</font> 
-- write a chapter that's missing and add it, find an open question and provide 
+<p>Yes, we're talking to <b>you</b>! <font color="red">We need contributors</font>
+- write a chapter that's missing and add it, find an open question and provide
 an answer, find bugs and
-<a href="http://sourceforge.net/tracker/?group_id=46815&atid=447472">report them</a>, 
+<a href="http://sourceforge.net/tracker/?group_id=46815&atid=447472">report them</a>,
 or just
 <a href="http://sourceforge.net/tracker/?atid=447475&group_id=46815&func=browse">
-send questions</a> and wait for somebody else to answer them. (If you have no 
+send questions</a> and wait for somebody else to answer them. (If you have no
 idea what might be missing but would like to help, take a look at the
-<a href="http://www.oreilly.com/catalog/cookbook/toc.html">table of contents</a> 
-of the Perl Cookbook.) Don't worry about the formatting, just send plain text if 
+<a href="http://www.oreilly.com/catalog/cookbook/toc.html">table of contents</a>
+of the Perl Cookbook.) Don't worry about the formatting, just send plain text if
 you like - we'll take care about that later. </p>
 <p>Thanks in advance for your help! </p>
-<p>The pages here on Sourceforge's web server should be fairly up-to-date - 
+<p>The pages here on Sourceforge's web server should be fairly up-to-date -
 they're automatically checked out of the
-<a href="http://sourceforge.net/cvs/?group_id=46815">CVS repository</a> once per 
+<a href="http://sourceforge.net/cvs/?group_id=46815">CVS repository</a> once per
 day. You can also download a
 <a href="http://cvs.sourceforge.net/cvstarballs/cl-cookbook-cvsroot.tar.gz">
-nightly CVS tarball</a> for offline browsing. More info, including mailing 
+nightly CVS tarball</a> for offline browsing. More info, including mailing
 list(s), can be found at the
-<a href="http://sourceforge.net/projects/cl-cookbook/">Sourceforge project page</a>. 
+<a href="http://sourceforge.net/projects/cl-cookbook/">Sourceforge project page</a>.
 There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
 <h2>Content</h2>
 <ul>
@@ -62,6 +62,7 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
   <li><a href="files.html">Files and Directories</a> </li>
   <li><a href="packages.html">Packages</a> </li>
   <li><a href="macros.html">Macros and Backquote</a> </li>
+  <li><a href="clos-tutorial/index.html">CLOS (the Common Lisp Object System) </a> </li>
   <li><a href="sockets.html">Sockets</a> </li>
   <li><a href="os.html">Interfacing with your OS</a> </li>
   <li><a href="ffi.html">Foreign Function Interfaces</a> </li>
@@ -103,28 +104,28 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
   <a href="http://www.xanalys.com/software_tools/reference/HyperSpec/index.html">
   The Common Lisp HyperSpec</a> by Kent M. Pitman </li>
   <li>Daniel Barlow's <a href="http://ww.telent.net/cliki">CLiki</a> </li>
-  <li><a href="http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html">The new 
+  <li><a href="http://www-jcsu.jesus.cam.ac.uk/~csr21/lispfaq.html">The new
   comp.lang.lisp FAQ</a> by Christophe Rhodes </li>
   <li><a href="http://www-2.cs.cmu.edu/Groups//AI/html/faqs/lang/lisp/top.html">
   The old comp.lang.lisp FAQ</a> by Mark Kantrowitz </li>
   <li><a href="http://www.lisp.org/">The Association of Lisp Users</a> </li>
-  <li><a href="http://www-2.cs.cmu.edu/~dst/LispBook/">Common Lisp: A Gentle 
+  <li><a href="http://www-2.cs.cmu.edu/~dst/LispBook/">Common Lisp: A Gentle
   Introduction to Symbolic Computation</a> by David S. Touretzky </li>
-  <li><a href="http://www.psg.com/~dlamkins/sl/cover.html">Successful Lisp: How 
+  <li><a href="http://www.psg.com/~dlamkins/sl/cover.html">Successful Lisp: How
   to Understand and Use Common Lisp</a> by David B. Lamkins </li>
-  <li><a href="http://www.paulgraham.com/onlisptext.html">On Lisp</a> by Paul 
+  <li><a href="http://www.paulgraham.com/onlisptext.html">On Lisp</a> by Paul
   Graham </li>
-  <li><a href="http://www-2.cs.cmu.edu/Groups/AI/html/cltl/cltl2.html">Common 
+  <li><a href="http://www-2.cs.cmu.edu/Groups/AI/html/cltl/cltl2.html">Common
   Lisp the Language, 2nd Edition</a> by Guy L. Steele </li>
-  <li><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and 
+  <li><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and
   Tutorial for Common Lisp</a> by Marty Hall </li>
   <li><a href="http://www.n-a-n-o.com/lisp/cmucl-tutorials/LISP-tutorial.html">
   Common Lisp Hints</a> by Geoffrey J. Gordon </li>
-  <li><a href="http://www.aiai.ed.ac.uk/~jeff/clos-guide.html">A Guide to CLOS</a> 
+  <li><a href="http://www.aiai.ed.ac.uk/~jeff/clos-guide.html">A Guide to CLOS</a>
   by Jeff Dalton </li>
-  <li><a href="http://www.aiai.ed.ac.uk/~jeff/lisp/cl-pitfalls">Common Lisp 
+  <li><a href="http://www.aiai.ed.ac.uk/~jeff/lisp/cl-pitfalls">Common Lisp
   Pitfalls</a> by Jeff Dalton </li>
-  <li><a href="http://www.ai.sri.com/~pkarp/loop.html">Tutorial for the Common 
+  <li><a href="http://www.ai.sri.com/~pkarp/loop.html">Tutorial for the Common
   Lisp Loop Macro</a> by Peter D. Karp </li>
   <li>
   <a href="http://iris.usc.edu/home/raycharles/price/lisp/doc/lisp-utilities.ps">
@@ -132,14 +133,14 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
   <li>
   <a href="http://www.cc.gatech.edu/computing/classes/cs2360/ghall/style/Good-Lisp-Style.ps">
   A Guide to Good Lisp Style</a> by Peter Norvig and Kent M. Pitman </li>
-  <li><a href="http://www.fast-index.com/declarative/lectures/">Lisp and 
+  <li><a href="http://www.fast-index.com/declarative/lectures/">Lisp and
   Elements of Style</a> by Nick Levine </li>
   <li>Pascal Costanza's
-  <a href="http://www.cs.uni-bonn.de/~costanza/lisp/guide.html">Highly 
+  <a href="http://www.cs.uni-bonn.de/~costanza/lisp/guide.html">Highly
   Opinionated Guide to Lisp</a> </li>
-  <li><a href="http://www.markwatson.com/opencontent/lisp_lic.htm">Loving Lisp - 
+  <li><a href="http://www.markwatson.com/opencontent/lisp_lic.htm">Loving Lisp -
   the Savy Programmer's Secret Weapon</a> by Mark Watson </li>
-  <li><a href="http://www.dynamiclearningcenter.com/">The Dynamic Learning 
+  <li><a href="http://www.dynamiclearningcenter.com/">The Dynamic Learning
   Center</a> </li>
 </ul>
 <p><a href="http://sourceforge.net">
@@ -151,7 +152,7 @@ There's also a <a href="CHANGELOG">CHANGELOG</a> available. </p>
 <address>
   http://cl-cookbook.sourceforge.net/</address>
 <p><br>
-$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.25 2003/06/02 19:31:54 
+$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.25 2003/06/02 19:31:54
 nhabedi Exp $ </p>
 
 </body>
